# gitlab-learning-scripts

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  course.yml  gl_checkaccount.py  gl_learning.py  requirements.txt  setup.cfg
.github/workflows/: lint.yml  pythonapp.yml
docs/: api.rst  conf.py  glc_apply_template.rst  glc_check_course.rst  glc_check_users.rst  glc_create_attendance.rst  glc_create_course.rst  glc_send_email.rst  index.rst  intro.rst  requirements.txt  usage.rst
gitlab_course/: __init__.py  apply_template.py  checkaccounts.py  checkcourse.py  createattendance.py  createcourse.py  createsession.py  glc.py  send_email.py
gitlab_course/templates/: attendance.csv  comments.md  session.tex
gitlab_learning/: checkaccounts.py  createattendance.py  createcourse.py  gl.py
gitlab_learning/templates/: README.md  attendance.csv  sign-in.tex
