[metadata]
name = gitlab-course
version = attr: gitlab_course.__version__.__version__
author = Magnus Hagdorn
author_email = magnus.hagdorn@charite.de
url = https://git.bihealth.org/maha10/gitlab-learning-scripts
description = Collection of Scripts to manage Projects on GitLab
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Intended Audience :: Education
    Topic :: Scientific/Engineering
    Topic :: Education

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    python-gitlab
    pyyaml
    jinja2

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
    sphinx-argparse
    myst-parser
lint = flake8 >= 3.5.0

[options.entry_points]
console_scripts =
    glc_check_users = gitlab_course.checkaccounts:main
    glc_create_course = gitlab_course.createcourse:main
    glc_create_attendance = gitlab_course.createattendance:main
    glc_apply_template = gitlab_course.apply_template:main
    glc_check_course = gitlab_course.checkcourse:main

[build_sphinx]
project = GitLab Course
source-dir = docs

[options.package_data]
gitlab_course = 
    templates/*.md
    templates/*.csv
    templates/*.tex

[flake8]
ignore = W503, C901
per-file-ignores =
    # imported but unused
    __init__.py: F401, F403
exclude = .git,__pycache__,build,dist,.eggs,docs
max-complexity = 10
